kodex-rs/core/tests/suite/snapshots/all__suite__mcp_tool_exposure__deferred_tools_resume_without_duplicate_update.snap
---
source: core/tests/suite/mcp_tool_exposure.rs
expression: "context_snapshot::format_context_snapshot(\"Persisted deferred tools remain unchanged after resuming the thread.\",\n&[SnapshotEntry::items(&requests[0].input()).labeled(\"Before resume\"),\nSnapshotEntry::items(&requests[1].input()).labeled(\"After resume\"),],\n&ContextSnapshotOptions::default().rewrite_known_segments(),)"
---
Scenario: Persisted deferred tools remain unchanged after resuming the thread.

## Window 1
-- request 1 (items; Before resume) --
00:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <APPS_INSTRUCTIONS>
    [03] <tools>
        Deferred tool namespaces:
        - mcp__kodex_apps__calendar: Plan events and manage your calendar.
        </tools>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    inspect deferred tools before resume

## Window 2 (after request 1: settings unavailable)
-- request 2 (items; After resume) --
00:message/developer[3]:
    [01] <PERMISSIONS_INSTRUCTIONS>
    [02] <APPS_INSTRUCTIONS>
    [03] <tools>
        Deferred tool namespaces:
        - mcp__kodex_apps__calendar: Plan events and manage your calendar.
        </tools>
01:message/user:
    <ENVIRONMENT_CONTEXT>
02:message/user:
    inspect deferred tools before resume
03:message/assistant:
    done
04:message/user:
    <ENVIRONMENT_CONTEXT>
05:message/user:
    inspect unchanged deferred tools after resume
